# marek

./: .gitignore  LICENSE  Makefile  NOTES.md  README.md  conf.lua  flake.nix  installer.nsi  main.lua  main.py  nuitka.cfg  pyproject.toml  pysidedeploy.spec  requirements.txt  zensical.toml
.github/workflows/: build.yml
assets/: banner.typ  manual.typ  styles.qss
docs/: banner.typ  index.md  installation.md  manual.typ
scripts/: visualize.py
src/: file_utils.lua  main.py
src/models/: object.py
src/ui/: annotations.lua  button.lua  colors.lua  preview.lua  sidebar.lua
src/widgets/: bottombar.py  canvas.py  sidebar.py  toolbar.py  utils.py
