[project]
name = "MAReK"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pydantic>=2.12.5",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = ["pip>=25.3"]

[tool.pyside6-project]
files = ["src/main.py"]
