[project]
name = "MAReK"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pyside6>=6.10.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
    "pip>=25.3",
]
lint = [
    "ruff>=0.14.10",
]

[tool.pyside6-project]
files = ["src/main.py"]
